--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" ng-app>
+<html lang="en" ng-app="spotifyApp">
 
 <head>
   <meta charset="utf-8">
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="/assets/styles/reset.css">
   <link rel="stylesheet" href="/assets/styles/style.css">
   <script src="angular.js"></script>
+  <script src="app.js"></script>
 </head>
 
-<body>
-{{1+1}}
-
+<body ng-controller="SpotifyController">
+  {{message}}
 
 </body>
   
