used ng-click to call scope method

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body ng-controller="SpotifyController">
-  {{message}}
-
+ 
+  <button ng-click="changeMessage()">change message</button>
+  <p>{{message}}</p>
+  
 </body>
   
 </html>
